--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Leo Ntluka</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-  Hello world
+  <div class="logo">
+    <h4>Lona Leo Ntluka</h4>
+  </div>
+  
+  <div class="navbar">
+    <ul>
+      <li><a href="#contact"> Contact </a></li>
+      <li><a href="#about"> About </a></li>
+      <li><a href="#explore"> Explore </a></li>
+    </ul>
+  </div>
+  
+  <div class="landing">
+    <H2>Welcome to my</br> Portfolio</H2>
+    </br>
+    <button>Explore</button>
+  </div>
+  
+
+
+  
   <script src="script.js"></script>
 </body>
 
