--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </div>
   
   <div class="landing">
-    <H2>Welcome to my</br> Portfolio</H2>
+    <div class="ltext">
+      <H2>Welcome to my</br> Portfolio</H2>
+    </div>
     </br>
     <button>Explore</button>
   </div>
