--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <title>Portfolio Website</title>
 </head>
 <body>
-  <div class="navbar">
-    
-  </div>
+  <header>
+    <div class="navbar">
+      <div class="logo">
+        <a href="#">Your-Name</a>
+      </div>
+      <ul class="links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
+  </header>
   <div class="container">
     
   </div>
