--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </div>
       <ul class="links">
         <li><a href="#about">About</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#services">Services</a></li>
+        </ul>
+      <a class="action_btn" href="#projects">Projects</a>
     </div>
   </header>
   <div class="container">
