done for the day

--- a/index.html
+++ b/index.html
@@ -18,11 +18,23 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="#services">Services</a></li>
         </ul>
-      <a class="action_btn" href="#projects">Projects</a>
+      <button>
+        <a class="action_btn" href="#projects">Projects</a>
+      </button>
     </div>
   </header>
-  <div class="container">
-    
-  </div>
+  <!-----<div class="container">
+      <div class="parent">
+        <div align="right"class="child-1">
+          <img src="" alt="profile-image">
+          <div align="left" class="child-2">
+            <h3>Your Name</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>--->
 </body>
 </html>
