--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="#services">Services</a></li>
         </ul>
-      <button>
-        <a class="action_btn" href="#projects">Projects</a>
+      <button class="action_btn">
+        <a href="#projects">Projects</a>
       </button>
     </div>
   </header>
