--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Portfolio Website</title>
 </head>
 <body>
-  <header>
+  <nav>
     <div class="navbar">
       <div class="logo">
         <a href="#">Your-Name</a>
@@ -22,19 +22,19 @@
         <a href="#projects">Projects</a>
       </button>
     </div>
-  </header>
-  <!-----<div class="container">
+  </nav>
+  <header>
+  <div class="container">
       <div class="parent">
-        <div align="right"class="child-1">
+        <div class="child-1">
+          <h3>Your Name</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+        </div>
+        <div class="child-2">
           <img src="" alt="profile-image">
-          <div align="left" class="child-2">
-            <h3>Your Name</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
-          </div>
         </div>
       </div>
     </div>
-    </div>
-  </div>--->
+  </header>
 </body>
 </html>
